Fix incorrectly sized carousel images having white space above them when expanding to max-height 90vh

--- a/src/Carousel/Carousel.css
+++ b/src/Carousel/Carousel.css
@@ -28,7 +28,8 @@
 
 .carousel-item-image {
   max-width: 100%;
-  max-height: 90vh;
+  max-height: 100%;
+  height: 80vh;
   margin: auto;
 }
 
